# revelo

./: .formatter.exs  .gitignore  .mise.toml  Cargo.toml  Dockerfile  README.md  TODO.md  fly.toml  mix.exs
.github/workflows/: elixir-ci.yml
assets/: package-lock.json  package.json  tailwind.colors.json  tailwind.config.js
assets/css/: app.css  storybook.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: revelo.ex  revelo_web.ex
lib/revelo/: accounts.ex  application.ex  diagram.ex  diagrams.ex  llm.ex  mailer.ex  release.ex  repo.ex  secrets.ex  session_server.ex  session_supervisor.ex  sessions.ex
lib/revelo_web/: auth_overrides.ex  endpoint.ex  gettext.ex  live_user_auth.ex  router.ex  session_manager.ex  session_server.ex  storybook.ex  telemetry.ex
native/graph_analyser/: Cargo.toml  README.md
native/graph_analyser/src/: lib.rs
priv/repo/: seeds.exs
storybook/: _root.index.exs  welcome.story.exs
storybook/components/: discussion.story.exs  loop_nav.story.exs  relationship_voting.story.exs  side_nav.story.exs  task_completed.story.exs  variable_confirmation.story.exs  variable_list.story.exs  variable_voting.story.exs  variables.story.exs
storybook/core_components/: back.story.exs  button.story.exs  error.story.exs  flash.story.exs  header.story.exs  icon.story.exs  input.story.exs  list.story.exs  table.story.exs
storybook/examples/: core_components.story.exs  countdown.story.exs  discussion.story.exs  relationship_voting.story.exs  session_settings.story.exs  (+4 more)
test/: test_helper.exs
(+227 files in other folders)
