[package]
name = "graph_analyser"
version = "0.1.0"
authors = ["Ben Swift <ben@benswift.me>"]
edition = "2021"

[lib]
name = "graph_analyser"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
petgraph = "0.7.1"
rustworkx-core = "0.16.0"
uuid = { version = "1.3", features = ["v4"] }
